adding last name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Hello world</h1>
     <h2>Hello</h2>
     <h3>Teddy</h3>
-    <h3>Alemtsehay</h3>
+    <h3>Alemtsehay Yeshanew</h3>
     <h3>Sosina</h3>
     <h3>Tsgereda</h3>
     <h3>Estif</h3>
