--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h3>Rediat</h3>
     <h3>Sisay Arega</h3>
     <h3>Mekonnen Ayele</h3>
-    <h3>Edna </h3>
+    <h3>Edna tegegen</h3>
 </body>
 
 </html>
