Danny Updated the index file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h3>Rediat</h3>
     <h3>Sisay Arega</h3>
     <h3>Mekonnen Ayele</h3>
+    <h3>Danny - You can use GitHub Desktop, it is simple, easy and fast to use</h3>
 </body>
 
 </html>
