Emnet's name added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h3>Mekonnen Ayele</h3>
     <h3>Danny - You can use GitHub Desktop, it is simple, easy and fast to use</h3>
     <h3>Edna tegegen</h3>
-    <h3>emnet</h3>
+    <h3>Emnet</h3>
 </body>
 
 </html>
